# buttons_switches

./: CMakeLists.txt  Kconfig  keys.code-workspace  nrf9160dk_nrf9160_ns.overlay  prj.conf  readme.md
src/: keys.c  keys.h  main.c
